# Semantic_Serach_Engine

./: .coverage  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.history/: .dockerignore_20251027202909  .dockerignore_20251027203339  Dockerfile_20251027202833  main_20251027015403.py  main_20251027020255.py  main_20251027020829.py  main_20251027021235.py  main_20251027021448.py  main_20251027022242.py  main_20251027022906.py  main_20251027024702.py  pyproject_20251027015540.toml  pyproject_20251027024845.toml  pyproject_20251027025015.toml  pyproject_20251027025111.toml
.history/.github/workflows/: ci_20251027202958.yml
.history/src/models/: embeddings_20251027024244.py  llm_20251027024326.py
.history/src/ui/: sidebar_20251027024553.py  styles_20251027024522.py
.history/src/utils/: config_20251027024206.py  pdf_processor_20251027024437.py
.history/tests/integration/: test_full_pipeline_20251027134106.py
.history/tests/unit/: test_config_20251027032006.py  test_pdf_processor_20251027032042.py  test_vector_store_20251027032216.py
src/models/: vector_store.py
src/ui/: chat.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_embeddings.py
